HTML CSS innerの追加

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 
 <body>
     <header>
-        <h1>LEVEL.5</h1>
+        <div class="inner">
+            <h1>LEVEL.5</h1>
+        </div>
     </header>
 
     <main>
         <section class="visual">
-            <p class="recruiting">RECRUITING SITE</p>
-            <p class="slogan">人の可能性が、<br>次の世界を<br>つくる。</p>
+            <div class="inner">
+                <p class="recruiting">RECRUITING SITE</p>
+                <p class="slogan">人の可能性が、<br>次の世界を<br>つくる。</p>
+            </div>
         </section>
 
-        <section class="discussion">
+        <section class="discussion inner">
             <h2>DISCUSSION</h2>
 
             <article class="all-post">
