--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <main>
         <section class="visual">
             <div class="inner">
-                <p class="recruiting">RECRUITING SITE</p>
-                <p class="slogan">人の可能性が、<br>次の世界を<br>つくる。</p>
+                <div class="text">
+                    <p class="recruiting">RECRUITING SITE</p>
+                    <p class="slogan">人の可能性が、<br>次の世界を<br>つくる。</p>
+                </div>
             </div>
         </section>
 
